orchestration/insurance/src/main/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: ${project.artifactId}
spec:
  template:
    spec:
      containers:
        - env:
            - name: DB_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: insurance-database-secret
                   key: user
            - name: DB_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: insurance-database-secret
                   key: password
            - name: GC_MAX_METASPACE_SIZE
              value: "150"
            - name: JAVA_OPTIONS
              value: "-Dswarm.datasources.data-sources.MyDS.connection-url=jdbc:postgresql://$(INSURANCE_DATABASE_SERVICE_HOST):$(INSURANCE_DATABASE_SERVICE_PORT)/insurance -Dswarm.datasources.data-sources.MyDS.user-name=$(DB_USERNAME) -Dswarm.datasources.data-sources.MyDS.password=$(DB_PASSWORD) -Dswarm.datasources.data-sources.MyDS.driver-name=postgresql -Dlra.http.host=lra-coordinator -Dlra.http.port=8080"
