orchestration/insurance/src/main/fabric8/route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ${project.artifactId}
spec:
  path: /insurances
  to:
    kind: Service
    name: insurance-lra-thorntail
